# SLDefeatNG

./: .gitignore  BuildVersion.h.in  CMakeLists.txt  CMakePresets.json  CMakeUser.txt  Changelog.txt  GenerateBuildVersion.cmake  PCH.h  plugin.cpp  vcpkg-configuration.json  vcpkg.json
SKSE/Plugins/: SexLabDefeat.ini
include/: Defeat.h  DefeatActor.h  DefeatActorManager.h  DefeatCombatManager.h  DefeatConfig.h  DefeatForms.h  DefeatHooks.h  DefeatManager.h  DefeatPapyrus.h  DefeatSpinLock.h  DefeatUtils.h  DefeatWidget.h
src/: DefeatActor.cpp  DefeatActor.h  DefeatActorManager.cpp  DefeatActorManager.h  DefeatCombatManager.cpp  DefeatCombatManager.h  DefeatConfig.cpp  DefeatConfig.h  DefeatDeferredExpiringValue.cpp  DefeatHooks.cpp  DefeatHooks.h  DefeatManager.cpp  DefeatManager.h  DefeatPapyrus.cpp  DefeatPapyrus.h  DefeatScene.cpp  DefeatScene.h  DefeatSpinLock.h  DefeatUtils.cpp  DefeatUtils.h  DefeatWidget.cpp  DefeatWidget.h  PCH.h  plugin.cpp
src/PapyrusInterface/: ActorExtraDataCallQueue.cpp  ActorExtraDataCallQueue.h  DefeatPapyrus.cpp  DefeatPapyrus.h  ExpiringFunctionCallQueue.cpp  ExpiringFunctionCallQueue.h  ObjectVariable.cpp  ObjectVariable.h
